--- a/system/pom.xml
+++ b/system/pom.xml
@@ -12,11 +12,12 @@
     <artifactId>system</artifactId>
 
     <dependencies>
+        <!--eureka注册中心依赖-->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
         </dependency>
-
+        <!--SpringBoot依赖-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
