--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,19 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
+
+            <!-- 集成mybatis -->
+            <dependency>
+                <groupId>org.mybatis.spring.boot</groupId>
+                <artifactId>mybatis-spring-boot-starter</artifactId>
+                <version>1.3.2</version>
+            </dependency>
+
+            <dependency>
+                <groupId>mysql</groupId>
+                <artifactId>mysql-connector-java</artifactId>
+                <version>5.1.37</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
