1.将通用的配置移动到server 注意：server配置文件的路径要放在resource/config/application.properties,不能和上层的路径一样放在resource根目录下

--- a/system/pom.xml
+++ b/system/pom.xml
@@ -40,6 +40,10 @@
             <artifactId>spring-boot-devtools</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.example</groupId>
+            <artifactId>server</artifactId>
+        </dependency>
 
     </dependencies>
 
